# vibelib

./: README.md  a.py  pyproject.toml  setup.py
src/vibelib/: __init__.py  client.py  config.py  exceptions.py  sort.py
src/vibelib/operations/: __init__.py  base.py  basic.py  lists.py  sorting.py  strings.py
tests/: conftest.py
tests/e2e/: test_end_to_end.py  test_public_api.py
tests/integration/: test_service_integration.py  test_sorting_service.py
tests/unit/: test_base_service.py  test_basic_service.py  test_client.py  test_config.py  test_list_service.py  test_sorting.py  test_sorting_service.py  test_string_service.py
