[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibelib"
version = "1.0.3"
description = "AI-powered computational operations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
dependencies = [
    "openai>=1.0.0",
]
authors = [
    {name = "soradotwav", email = "dev@soradotwav.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibelib = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
